修改默认主题为 brewski

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: pln
+theme: brewski
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
@@ -104,6 +104,3 @@ deploy:
   type: ''
 
 
-# _config.yml
-theme_config:
-  colorscheme: dark
