--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "hexo generate"
   },
   "hexo": {
-    "version": ""
+    "version": "7.3.0"
   },
   "dependencies": {
     "hexo": "^7.3.0",
