更新站点标题和副标题，修改为“付之一笑”和“阅读、思考、写作”

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## 源码: https://github.com/hexojs/hexo/
 
 # 站点
-title: Hexo
-subtitle: ''
+title: 付之一笑
+subtitle: '阅读、思考、写作'
 description: ''
 keywords:
 author: CHACAT
