--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -1030,22 +1030,16 @@ links:
   # Member item of page
   items:
     - {
-      title: "Fluid Blog",
-      intro: "主题博客",
-      link: "https://hexo.fluid-dev.com/",
+      title: "Tangly的学习笔记",
+      intro: "NotionNext的作者",
+      link: "https://blog.tangly1024.com/",
       avatar: "/img/favicon.png"
     }
     - {
-      title: "Fluid Docs",
-      intro: "主题使用指南",
-      link: "https://hexo.fluid-dev.com/docs/",
-      avatar: "/img/favicon.png"
-    }
-    - {
-      title: "Fluid Repo",
-      intro: "主题 GitHub 仓库",
-      link: "https://github.com/fluid-dev/hexo-theme-fluid",
-      avatar: "/img/favicon.png"
+      title: "张洪Heo",
+      intro: "分享设计与科技生活",
+      link: "https://blog.zhheo.com/",
+      avatar: "https://bu.dusays.com/2022/12/28/63ac2812183aa.png"
     }
 
   # 当成员头像加载失败时，替换为指定图片
@@ -1056,7 +1050,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: true
-    content: '<hr><p>发送邮件申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：付之一笑</li><li>简介：阅读、思考、写作</li><li>链接：https://blog.chawfoo.com</li><li>图片：https://hexo.fluid-dev.com/img/favicon.png</li></ul>'
+    content: '<hr><p>欢迎来信（Chawf56@outlook.com）交换友链！按如下格式提供信息：</p><ul><li>博客名：付之一笑</li><li>简介：阅读、思考、写作</li><li>链接：https://blog.chawfoo.com</li><li>图片：https://hexo.fluid-dev.com/img/favicon.png</li></ul>'
 
   # 评论插件
   # Comment plugin
