更新友链头像链接，替换为新的图片地址

--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -1033,7 +1033,7 @@ links:
       title: "Tangly的学习笔记",
       intro: "NotionNext的作者",
       link: "https://blog.tangly1024.com/",
-      avatar: "/img/favicon.png"
+      avatar: "https://blog-1259751088.cos.ap-shanghai.myqcloud.com/uPic/NjRY5L.tif"
     }
     - {
       title: "张洪Heo",
