--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,22 @@ theme: solitude
 deploy:
   type: ''
 
-
+# archer 配置
+jsonContent:
+  meta: true
+  pages: false
+  posts:
+    title: true
+    date: true
+    path: true
+    text: false
+    raw: false
+    content: false
+    slug: false
+    updated: false
+    comments: false
+    link: false
+    permalink: true
+    excerpt: false
+    categories: true
+    tags: true
