--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ ignore:
 # 扩展
 ## 插件: https://hexo.io/plugins/
 ## 主题: https://hexo.io/themes/
-theme: next
+theme: icarus
 
 # 部署
 ## 文档: https://hexo.io/docs/one-command-deployment
