--- a/themes/solitude/_config.yml
+++ b/themes/solitude/_config.yml
@@ -17,8 +17,15 @@
 # --------------------------- start ---------------------------
 # Site information
 # 网站信息
+title: 付之一笑 # 网站标题
+subtitle: '阅读、思考、写作' # 副标题
+description: '创作自留地' # 网站描述
+keywords: '游戏, 开发' # 网站关键字
+author: 查猫 # 网站作者
+language: zh-CN # 网站语言
+timezone: 'Asia/Shanghai' # 时区
 site:
-  name:
+  name: 付之一笑
     class: text # text / i_class / img
     custom: Solitude # Solitude / fas fa-ghost / /img/pwa/favicon.ico
   icon: /img/pwa/favicon.ico # Site icon / 网站图标
@@ -31,8 +38,8 @@ nav:
   # Left Box
   # 左侧盒子
   group:
-  #  project: # name
-  #    Solitude: https://github.com/everfu/hexo-theme-solitude || /img/pwa/favicon.ico # name: url || icon
+    我的: # name
+      个人主页: https://blog.chawfoo.com/ || /img/pwa/favicon.ico # name: url || icon
 
   # Menu
   # 菜单
