--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,42 @@
+# Hexo 配置
+## 文档: https://hexo.io/docs/configuration.html
+## 源码: https://github.com/hexojs/hexo/
+
+# 站点
 title: 付之一笑
-subtitle: 阅读、思考、写作
+subtitle: '阅读、思考、写作'
 description: ''
-keywords: null
+keywords:
 author: CHACAT
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
+
+# URL
+## 在这里设置您的站点 URL。例如，如果您使用 GitHub Page，请将 URL 设置为 'https://username.github.io/project'
 url: http://example.com
-permalink: ':year/:month/:day/:title/'
-permalink_defaults: null
+permalink: :year/:month/:day/:title/
+permalink_defaults:
 pretty_urls:
-  trailing_index: true
-  trailing_html: true
+  trailing_index: true # 设置为 false 以从永久链接中删除尾随的 'index.html'
+  trailing_html: true # 设置为 false 以从永久链接中删除尾随的 '.html'
+
+# 目录
 source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: ':lang'
-skip_render: null
-new_post_name: ':title.md'
+i18n_dir: :lang
+skip_render:
+
+# 写作
+new_post_name: :title.md # 新文章的文件名
 default_layout: post
-titlecase: false
+titlecase: false # 将标题转换为标题大小写
 external_link:
-  enable: true
-  field: site
+  enable: true # 在新标签页中打开外部链接
+  field: site # 应用于整个站点
   exclude: ''
 filename_case: 0
 render_drafts: false
@@ -42,22 +54,52 @@ prismjs:
   preprocess: true
   line_number: true
   tab_replace: ''
+
+# 首页设置
+# path: 博客首页的根路径。（默认 = ''）
+# per_page: 每页显示的文章数。（0 = 禁用分页）
+# order_by: 文章排序。（默认按日期降序排序）
 index_generator:
   path: ''
   per_page: 10
-  order_by: '-date'
+  order_by: -date
+
+# 分类和标签
 default_category: uncategorized
-category_map: null
-tag_map: null
+category_map:
+tag_map:
+
+# 元数据元素
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
+
+# 日期/时间格式
+## Hexo 使用 Moment.js 解析和显示日期
+## 您可以自定义日期格式，如
+## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-updated_option: mtime
+## updated_option 支持 'mtime', 'date', 'empty'
+updated_option: 'mtime'
+
+# 分页
+## 将 per_page 设置为 0 以禁用分页
 per_page: 10
 pagination_dir: page
-include: null
-exclude: null
-ignore: null
+
+# 包含/排除文件
+## include:/exclude: 选项仅适用于 'source/' 文件夹
+include: []
+exclude: []
+ignore:
+
+# 扩展
+## 插件: https://hexo.io/plugins/
+## 主题: https://hexo.io/themes/
 theme: icarus
+
+# 部署
+## 文档: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
