--- a/_config.yml
+++ b/_config.yml
@@ -110,23 +110,23 @@ plugin:
   - hexo-asset-image
   - hexo-prism-plugin
   - hexo-toc
-  # ... other plugins you'd like to enable
+  # ... 其他您想启用的插件
 
-# Generate archive page
+# 生成归档页面
 archive_generator:
   per_page: 0
 
-# Generate categories index page and each category page
+# 生成分类索引页面和每个分类页面
 category_generator:
   per_page: 10
   enable_index_page: true
 
-# Generate tags index page and each tag page
+# 生成标签索引页面和每个标签页面
 tag_generator:
   per_page: 10
   enable_index_page: true
 
-# Generator atom feed for you website
+# 生成 Atom feed
 feed:
   type: atom
   path: atom.xml
@@ -136,7 +136,7 @@ feed:
   content_limit: 140
   content_limit_delim: ' '
 
-# For syntax highlighting
+# 用于语法高亮
 prism_plugin:
   mode: 'preprocess'
   theme: 'default'
